Fix scrollbars by adding /deep/

--- a/stylesheets/atom.less
+++ b/stylesheets/atom.less
@@ -10,17 +10,17 @@ atom-workspace::shadow {
 }
 
 .scrollbars-visible-always {
-  ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
+  /deep/ ::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
   }
 
-  ::-webkit-scrollbar-track,
-  ::-webkit-scrollbar-corner {
+  /deep/ ::-webkit-scrollbar-track,
+  /deep/ ::-webkit-scrollbar-corner {
     background: @scrollbar-background-color;
   }
 
-  ::-webkit-scrollbar-thumb {
+  /deep/ ::-webkit-scrollbar-thumb {
     background: @scrollbar-color;
     border-radius: 5px;
     box-shadow: 0 0 1px black inset;
